+ galerei, aktualizacii, +hom

--- a/Zakamensk.mw
+++ b/Zakamensk.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = 
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 11,249
- | Voz' = 2017
+ | Eläjiden lugu = 11,191
+ | Voz' = 2021
  | Pind = 59.22
  | Fail = Вид на город Закаменск.jpg
- | Pämez' = Evgenii Poläkov<br />(sügüz'ku 2013—)
+ | Pämez' = Mihail Cirenov<br />(heinku 2019—)
  | Telefonkod = +7-30137-xx-xxx
  | Avtokod = 03
  | Aigvö = [[UTC]]+8 ([[MSK]]+5)
@@ -19,7 +19,7 @@
 == Istorii ==
 Eländpunktan aluz om pandud vl 1934 kuti ''Džidastroi-žilo'' sauvomha da kävutamha [[vol'fram]]an i [[molibden]]an küllästamižfabrikad sijaližel torhudel. Vl 1938 kätihe žilod lidnanvuiččeks. Vl 1944 anttihe lidnan statusad da udesnimitihe ''Gorodok-lidnaks'', kävutihe ottud plenha da türmatud mehiden töid. Vspäi 1959 om nügüdläiženke nimenke.
 
-Kaivuzkombinat radoi vhesai 1998, sikš miše kändihe ližatomaks. Vspäi 2006 zavottihe vol'framan, kuldan da hobedan samišt kombinatan jändusišpäi. Lidn šingotase mugažo metallanvalamižen edheotandal i sömtegimištol (lihakombinat, leibtegim, oludtegim).
+Kaivuzkombinat radoi vhesai 1998, sikš miše kändihe ližatomaks. Vspäi 2006 zavottihe vol'framan, kuldan da hobedan samišt kombinatan jändusišpäi. Zakamensk-lidn šingotase mugažo metallanvalamižen edheotandal i sömtegimištol (lihakombinat, leibtegim, oludtegim).
 
 == Geografijan andmused ==
 Lidn sijadase Modonkul'-jogen randoil i 2 km suvhe Džid-jogespäi ([[Seleng (jogi)|Selengan]] hurapol'ne bassein), Džidan mägisel'gan keskuzpalas, 1100 m ü.m.t. keskmäižel korktusel, om ümbärtud taigamecal mägipautkil. Letetorokad oleldas. Lidnan territorijan koumandez om redustadud kombinatan toksižil heitandoil tähäsai. Matkad [[Mongolii|Mongolijan]] röunhasai om 4 km suvipäivlaskmha, [[Ulan Ude]]hesai om 340 km pohjoižpäivnouzmha orhal vai 410 km avtotedme. Lähembaižed Venäman lidnad oma Irkutskan agjan [[Slüdänk (lidn)|Slüdänk]] 145 km pohjoižhe orhal vai 740 km avtotedme i [[Baikal'sk]] 145 km pohjoižhe orhal vai 705 km avtol.
@@ -27,12 +27,28 @@ Lidn sijadase Modonkul'-jogen randoil i 2 km suvhe Džid-jogespäi ([[Seleng (jo
 Holtoson-žilo ({{lang-bua|Холтоһон}}, 877 rist. vl 2010) i Hasur-žilo ({{lang-ru|Хасура}}, {{lang-bua|Хасуури}}, 80 rist. vl 2010) mülüdas lidnankundha vn 2015 heinkuspäi Zakamenskan ližaks. Lidnankundan pind — 80,95 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 11 524 ristitud, rajonan kaks' videndest. Kaikiš suremb lidnan ristitišt oli 16 300 eläjad vl 1992. Vl 2017 kaik 12 005 ristitud elihe lidnankundas. Buddizman dacan i ortodoksižen hristanuskondan jumalanpert' oma olmas lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 11 524 ristitud, rajonan kaks' videndest. Kaikiš suremb lidnan ristitišt oli 16 300 eläjad vl 1992. Vl 2017 kaik 11 249 ristitud elihe lidnas i 12 005 ristitud kaikes lidnankundas.
 
-Professionaližen opendusen aluzkund om Zakamenskan agrotegimištoline tehnikum.
+Maanin-dugan ([[buddizm]]) i Mikulai-čudonsädajan jumalanpert' ([[ortodoksine hristanuskond]]) oma olmas lidnas.
+
+Professionaližen opendusen aluzkund om Zakamenskan agrotegimištoline tehnikum.<ref>[http://zakamnazapt.profiedu.ru/ Zakamenskan agrotegimištoližen tehnikuman sait (''zakamnazapt.profiedu.ru'').] {{ref-ru}}</ref>
+
+Edeline lidnankundan pämez' om Evgenii Poläkov (sügüz'ku 2013 — kezaku 2019).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Закаменский дацан.jpg|Maanin-dugan, vn 2012 nägu
+Закаменская церковь.jpg|Mikulai-čudonsädajan jumalanpert', vn 2012 nägu
+Закаменск-центр.jpg|Rajonan kul'turkeskuz (2012)
+New school in Zakamensk 2.jpg|Zakamenskan keskškol nomer 1 (uz' sauvuz, 2015)
+Tamir sportcomplex in Zakamensk.jpg|«Tamir»-sportkompleks (2015)
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
-* [http://admzakamensk.mozello.ru/ Lidnankundan tobmuden aluzkundoiden oficialine sait (''admzakamensk.mozello.ru'').] {{ref-ru}}
+* [http://admzakamensk.bur.eis1.ru/ Lidnankundan tobmuden aluzkundoiden oficialine sait (''admzakamensk.bur.eis1.ru'').] {{ref-ru}}
 {{Commons|Category:Zakamensk}}
 
 {{Burätijan Tazovaldkundan lidnad}}
