--- a/Ühten_kirjan_kirjutai.mw
+++ b/Ühten_kirjan_kirjutai.mw
@@ -1,16 +1,23 @@
-'''„Ühten kirjan kirjutai“''' ([[latinan kel'|lat.]]: ''Homo unius libri'') om [[termin]], sättutoitud [[kirjutai|kirjutajile]], kudambad oma levedali tetabad vaiše ühtel kirjal. Hot' hö voiba kirjutada enamba [[säduz|sädusid]], heiden sädamižen toine pala jäb vähäižel tetabaks lugijoile.
+'''«Ühten kirjan kirjutai»''' ({{lang-la|Homo unius libri}}) om sättutoitud [[termin]]
+niile [[kirjutai|kirjutajile]], kudambad oma tetabad levedali ühtel kirjal vaiše, i ani kuti kaik tegijan sädamižvägi kogozihe siš.
+
+Hot' mugomad tegijad voidas kirjutada enamba [[säduz|sädusid]], heiden sädamižen toine pala jäb tetabaks lugijoile vähemba.
 
 == Ozutesed ==
 * '''[[Gribojedov Aleksandr|Aleksandr Gribojedov]]''' — [[Gor'a melespäi]]
 * '''[[Eršov Pötr|Pötr Eršov]]''' — [[Hebohut-gurbačut]]
-* '''[[Mitčell Margaret|Margaret Mitčell]]''' — [[Tullejan jäl'ghe (roman)|Tullejan jäl'ghe]]
+* '''[[Mitčell Margaret|Margaret Mitčell]]''' — [[Ottud tulleil (roman)|Ottud tulleil]]
 * '''[[Štil'mark Robert|Robert Štil'mark]]''' — [[Jälgestai Kal'kuttaspäi]]
-* '''[[Li Harper|Harper Li]]''' — [[Rikta nagranzoitajad]]
-da toižed.
+* '''[[Li Harper|Harper Li]]''' — [[Rikta nagranzoitajad]].
 
 == Kacu mugažo ==
 * [[Magnum opus]]
 * [[Ühten hitan artist]]
-{{stub}}
 
+== Homaičendad ==
+<references />
+
+{{Commons|Category:Timeo hominem unius libri}}
+
+{{stub}}
 [[Kategorii:Literatur]]
