--- a/Ühten_kirjan_kirjutai.mw
+++ b/Ühten_kirjan_kirjutai.mw
@@ -1,7 +1,9 @@
 '''«Ühten kirjan kirjutai»''' ({{lang-la|Homo unius libri}}) om sättutoitud [[termin]]
 niile [[kirjutai|kirjutajile]], kudambad oma tetabad levedali ühtel kirjal vaiše, i ani kuti kaik tegijan sädamižvägi kogozihe siš.
 
-Hot' mugomad tegijad voidas kirjutada enamba [[säduz|sädusid]], heiden sädamižen toine pala jäb tetabaks lugijoile vähemba.
+Hot' mugomad tegijad voidas kirjutada enamba [[säduz|sädusid]], heiden sädamižen toine pala jäb tetabaks lugijoile vähemba. Toižin sanoin, ristitun satuz kirjutajaks om röunatud ühtel agjal.
+
+Se sädamižen harakterizuind sündui latinižes ''hominem unius libri timeo''-virkehespäi («varaidan ühten kirjan ristitud») niiden täht, miččed lugiba vaiše üht kirjad ičeze elos (kut [[Homoi Akvinlaine]] Biblijad) i todas sidä ozuteseks kaikiš statjoiš.
 
 == Ozutesed ==
 * '''[[Gribojedov Aleksandr|Aleksandr Gribojedov]]''' — [[Gor'a melespäi]]
