--- a/Surikov_Vasilii.mw
+++ b/Surikov_Vasilii.mw
@@ -2,7 +2,9 @@
 | изображение = V.Surikov, Self-Portrait (1879, Tretyakov gallery).jpg
 | описание изображения = Vasilii Surikovan avtoportret, 1879
 }}
-'''Vasilii Ivanovič Surikov''' ({{lang-ru|Василий Иванович Суриков}}; sünd. 28. viluku 1848, [[Krasnojarsk]], [[Jenisein gubernii]], [[Venäman imperii]] — kol. 13. keväz'ku 1916, [[Moskv]], Venäman imperii) oli venämalaine pirdai [[kozakad|kozakan]] augotižlibundanke. Suriden istorižiden kuviden tegii.
+'''Vasilii Ivanovič Surikov''' ({{lang-ru|Василий Иванович Суриков}}; sünd. 28. viluku 1848, [[Krasnojarsk]], [[Jenisein gubernii]], [[Venäman imperii]] — kol. 13. keväz'ku 1916, [[Moskv]], Venäman imperii) oli venämalaine voimujupirdai [[kozakad|kozakan]] augotižlibundanke. Suriden istorižiden kuviden tegii.
+
+Mez' openui Imperatorižes Čomamahtoiden akademijas (Piter) vll 1869−1875. Sirdi Moskvha vl 1877, ajeli Krasnojarskha kezaaigaks paksus. Oli al'ma-materan ühtnijan i akademikan vspäi 1895.
 
 == Homaičendad ==
 <references/>
