--- a/Surikov_Vasilii.mw
+++ b/Surikov_Vasilii.mw
@@ -2,10 +2,10 @@
 | изображение = V.Surikov, Self-Portrait (1879, Tretyakov gallery).jpg
 | описание изображения = Vasilii Surikovan avtoportret, 1879
 }}
-'''Vasilii Ivanovič Surikov''' ({{lang-ru|Василий Иванович Суриков}}; sünd. 28. viluku 1848, [[Krasnojarsk]], [[Jenisein gubernii]], [[Venäman imperii]] — kol. 13. keväz'ku 1916, [[Moskv]], Venäman imperii) oli venämalaine voimujupirdai [[kozakad|kozakan]] augotižlibundanke. Suriden istorižiden kuviden tegii, pirdi portretoid-ki.
+'''Vasilii Ivanovič Surikov''' ({{lang-ru|Василий Иванович Суриков}}; sünd. 12 (24). viluku 1848, [[Krasnojarsk]], [[Jenisein gubernii]], [[Venäman imperii]] — kol. 6 (19). keväz'ku 1916, [[Moskv]], Venäman imperii) oli venämalaine voimujupirdai [[kozakad|kozakan]] augotižlibundanke. Suriden istorižiden kuviden tegii, pirdi portretoid-ki.
 
 == Biografii ==
-Surikov oli sündnu valdkundmehen kanzha, pirdaškanzi laps'aigaspäi. Ezmäine openduzsija oli Krasnojarskan makundan škol, kus openzihe pirdandad. Edemba mez' sai mecenatad gubernatoraspäi i openui Imperatorižes Čomamahtoiden akademijas (Piter) vll 1869−1875.
+Surikov oli sündnu valdkundmehen kanzha, pirdaškanzi laps'aigaspäi. Ezmäine openduzsija oli Krasnojarskan makundan škol, kus openzihe pirdandad. Edemba mez' sai mecenatad gubernatoraspäi i openui Imperatorižes Čomamahtoiden akademijas (Piter) vll 1869−1875. Oti kävutamižhe [[Venä]]n pirdajiden mahtoid.
 
 Pirdai sirdi Moskvha vl 1877, ajeli Krasnojarskha kezaaigaks paksus. Oli al'ma-materan ühtnijan i akademikan vspäi 1895. Vl 1910 Surikov i Leonid Černišov-arhitektor avaižiba pirdandškolad Krasnojarskha.
 
