--- a/Surikov_Vasilii.mw
+++ b/Surikov_Vasilii.mw
@@ -2,12 +2,22 @@
 | изображение = V.Surikov, Self-Portrait (1879, Tretyakov gallery).jpg
 | описание изображения = Vasilii Surikovan avtoportret, 1879
 }}
-'''Vasilii Ivanovič Surikov''' ({{lang-ru|Василий Иванович Суриков}}; sünd. 12 (24). viluku 1848, [[Krasnojarsk]], [[Jenisein gubernii]], [[Venäman imperii]] — kol. 6 (19). keväz'ku 1916, [[Moskv]], Venäman imperii) oli venämalaine voimujupirdai [[kozakad|kozakan]] augotižlibundanke. Suriden istorižiden kuviden tegii, pirdi portretoid-ki.
+'''Vasilii Ivanovič Surikov''' ({{lang-ru|Василий Иванович Суриков}}; sünd. 12 (24). viluku 1848, [[Krasnojarsk]], [[Jenisein gubernii]], [[Venäman imperii]] — kol. 6 (19). keväz'ku 1916, [[Moskv]], Venäman imperii) oli venämalaine voimujupirdai [[kozakad|kozakan]] augotižlibundanke. Sur'kuluiden (metrad surtte) istorižiden kuviden tegii, pirdi portretoid-ki.
 
 == Biografii ==
 Surikov oli sündnu valdkundmehen kanzha, pirdaškanzi laps'aigaspäi. Ezmäine openduzsija oli Krasnojarskan makundan škol, kus openzihe pirdandad. Edemba mez' sai mecenatad gubernatoraspäi i openui Imperatorižes Čomamahtoiden akademijas (Piter) vll 1869−1875. Oti kävutamižhe [[Venä]]n pirdajiden mahtoid.
 
 Pirdai sirdi Moskvha vl 1877, ajeli Krasnojarskha kezaaigaks paksus. Oli al'ma-materan ühtnijan i akademikan vspäi 1895. Vl 1910 Surikov i Leonid Černišov-arhitektor avaižiba pirdandškolad Krasnojarskha.
+
+== Znamasižed kuvad ==
+* «Ambujiden surmičendan homendez» (1878−1881, {{lang-ru|Утро стрелецкой казни}})
+* «Menšikov Berözovos» (1883, ''Меншиков в Берёзове'')
+* «Morozova-bajarak» (1884−1887, ''Боярыня Морозова'')
+* «Lumilidnuden otand vägel» (1889−1891, ''Взятие снежного городка'')
+* «Sibirin alištuz Jermak Timofejevičul» (1891−1895, '' Покорение Сибири Ермаком Тимофеевичем'')
+* «Suvorovan päličmänend Al'piš üliči» (1895−1899, ''Переход Суворова через Альпы'')
+* «Stepan Razin» (1900−1910, ''Степан Разин'')
+* «Carintütren tulend naižjumalankodihe» (1908−1912, ''Посещение царевной женского монастыря'')
 
 == Homaičendad ==
 <references/>
