--- a/Anglijan_kel'.mw
+++ b/Anglijan_kel'.mw
@@ -1,5 +1,5 @@
 {{1000}}{{A10000}}
-[[file:Anglospeak (subnational version).svg|thumb]]
+[[Fail:Anglospeak (subnational version).svg|thumb|right|350px|Anglijan kelen oficialiženke statusanke levigandusen kart: muzasinine — üks'jäine oficialine kel', sinivauvaz — toine oficialine kel']]
 [[Fail:EN English Language Symbol ISO 639-1 IETF Language Tag Icon.svg|thumb|right|250px|«EN» — anglijan kelen znam [[ISO 639-1|ISO:n 639-1]] mödhe]]
 '''Anglijan kel'''' (vai '''englandin kel''''; ičeze nimituz: ''English'') om [[germanižed keled|germanižen gruppan]] [[indoevropine kel'kanz|indoevropine kel']].
 
