--- a/Sogneriket.mw
+++ b/Sogneriket.mw
@@ -1,8 +1,8 @@
-'''«Sogneriket»''' om norvegižen [[Windir]]-gruppan ezmäine [[demo (muzik)|demo]]. Se om pästtud vl [[1995]].
+'''«Sogneriket»''' om norvegižen [[Windir]]-gruppan ezmäine [[demo (muzik)|demoal'bom]]. Se om pästtud vl [[1995]].
 
-[[Valfar]] (Terje Bakken) vändi kaikil instrumentoil iče. Demoal'bom om sätud [[metal]]-stilin blek- i folk-čuradusiš.
+[[Valfar]] (Terje Bakken) vändi kaikil instrumentoil iče. Demoal'bom om sätud [[metal]]-stilin blek- i folk-čuradusiš. Pajoiden ühthine hätkeližuz om 44 minutad.
 
-Jäl'ghine om «[[Det gamle riket]]»-demoal'bom (1996).
+Gruppan jäl'ghine om «[[Det gamle riket]]»-demoal'bom (1996).
 
 == Pajoiden nimikirjutez ==
 # ''Krigaren si gravferd'' (6:14, Sodamehiden mahapanend)
