--- a/Baženov_Timofei.mw
+++ b/Baženov_Timofei.mw
@@ -1,5 +1,12 @@
 {{Personalii}}
-'''Timofei Timofejevič Baženov''' ({{lang-ru|Тимофей Тимофеевич Баженов}}; sünd. [[25. viluku]] [[1976]], [[Moskv]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om [[Venäma|venämalaine]] TV-lehtezmez' da zoolog. Hän tegi da vedi ningomad populärižed programad kut «Mecmail'm», «Baženovan sarnad», «[[Baženovan reiting]]» da «Miruiden soda»<ref>[http://sobesednik.ru/kultura-i-tv/20140322-televedushchiy-timofey-bazhenov-ya-pereproboval-sotni-smerte Телеведущий Тимофей Баженов: Я перепробовал сотни смертей... (Televizijan Timofei Baženov-vedai: mujahtin sadanikoid surmen toižendoišpäi...) / ''Sobesednik.ru''.] {{ref-ru}}</ref>.
+'''Timofei Timofejevič Baženov''' ({{lang-ru|Тимофей Тимофеевич Баженов}}; sünd. [[25. viluku]] [[1976]], [[Moskv]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om [[Venäma|venämalaine]] TV-lehtezmez' da zoolog.
+
+Mez' tegi da vedi ningomid populärižid televizijan programid kut «Mecmail'm», «Baženovan sarnad», «[[Baženovan reiting]]» da «Miruiden soda»<ref>[http://sobesednik.ru/kultura-i-tv/20140322-televedushchiy-timofey-bazhenov-ya-pereproboval-sotni-smerte Телеведущий Тимофей Баженов: Я перепробовал сотни смертей... (Televizijan Timofei Baženov-vedai: mujahtin sadanikoid surmen toižendoišpäi...) / ''Sobesednik.ru''.] {{ref-ru}}</ref>. Ned programad lähtliba telekanalil NTV, Venäma-2 i Minun planet.
+
+== Biografii ==
+Timofei om sündnu lehtezmehen i lekarin pereheze. Openui Moskvan pedagogižes valdkundaližes universitetas (ehtal'ne palakund), om sen ühtenden (rusttanke diplomanke) i kahtenden biologižiden fakul'tetoiden pästnikan vspäi 2001. Mez' radoi tigriden i händikahiden dressirujal edel tulendad massinformacijan sarakho.
+
+Baženov om Venäman Valdkundaližen Duman 8. kucundan deputat (vn 2021 sügüz'kuspäi).
 
 == Homaičendad ==
 <references />
