--- a/Ulan_Ude.mw
+++ b/Ulan_Ude.mw
@@ -1,32 +1,53 @@
 {{Eländpunkt
- | Nimi = Ulan Ude<br />Улан-Удэ <small>(ven.)</small><br />Улаан Үдэ <small>(burät.)</small>
- | Lidnanznam = Gerb u u.jpg
+ | Nimi = Ulan Ude<br />Улан-Удэ <small>(ven.)</small><br />Улаан Үдэ<small>(burät.)</small>
+ | Lidnanznam = Ulan-Ude COA (2005).gif
  | Flag = Flag of Ulan-Ude (Buryatia).png
  | Lidnanznam text = Ulan Uden lidnanznam
  | Flag text = Ulan Uden flag
  | Valdkund = Venäma
- | Eläjiden lugu = 431,922
- | Voz' = 2017
+ | Eläjiden lugu = 437,514
+ | Voz' = 2021
  | Pind = 365.71
  | Fail = Центр Улан-Удэ.JPG
- | Pämez' = Aleksandr Golkov<br />(tal'vku 2012—)
+ | Pämez' = Igor' Šutenkov<br />(sügüz'ku 2019—)
  | Telefonkod = +7-3012-xxx-xxx
  | Avtokod = 03
  | Aigvö = [[UTC]]+8 ([[MSK]]+5)
 }}
-[[Fail:Районы Улан-Удэ.png|thumb|left|250px|'''Ulan Uden administrativižed rajonad:'''<br />{{legend|yellow|Raudterajon}} {{legend|orange|Okäbrin rajon}} {{legend|fuchsia|Nevondkundaline rajon}}]]
-'''Ulan Ude''' ({{lang-ru|Улан-Удэ}}, {{lang-bua|Улаан Үдэ}}) om lidn da lidnümbrik [[Venäma]]n [[Sibir'|Sibirin]] suvipäivnouzmas. Se om [[Burätijan Tazovaldkund]]an pälidn da kaikiš suremb lidn.
+[[Fail:Районы Улан-Удэ.png|thumb|left|250px|'''Ulan Uden administrativižed rajonad:'''<br />{{legend|yellow|Raudterajon}} {{legend|orange|Oktäbrin rajon}} {{legend|fuchsia|Nevondkundaline rajon}}]]
+'''Ulan Ude''' ({{lang-ru|Улан-Удэ}}, {{lang-bua|Улаан Үдэ хото}}) om lidn da lidnümbrik [[Venäma]]n [[Sibir'|Sibirin]] suvipäivnouzmas. Se om [[Burätijan Tazovaldkund]]an pälidn da kaikiš suremb lidn.
 
 == Istorii ==
-Eländpunktan aluz om pandud vl 1666 Venäman [[kozakad|kozakoil]] kuti ''Tal'vdundan sija Udal'' ({{lang-ru|Удинское зимовье}}) keradamha valdkundmaksuid tungusalaižiš rahvahišpäi. Vspäi 1680 sen nimi oli ''Udan lidnuz'' ({{lang-ru|Удинский острог}}). Vl 1690 sai lidnan statusad udenke ''Udinsk''-nimenke. Vozil 1735−1924 nimitihe '''Üläudinsk:aks''' ({{lang-ru|Верхнеудинск}}).
+[[Fail:Ulan-Ude Burg.JPG|thumb|right|250px|Muštrist Udan lidnusen alusenpanendan sijas]]
+Eländpunktan aluz om pandud vl 1666 Venäman [[kozakad|kozakoil]] kuti ''Tal'vdundan sija Udal'' ({{lang-ru|Удинское зимовье}}) keradamha valdkundmaksuid tungusalaižiš rahvahišpäi. Vspäi 1680 sen nimi oli ''Udan lidnuz'' ({{lang-ru|Удинский острог}}). Vl 1690 sai lidnan statusad udenke ''Udinsk''-nimenke. Vozil 1735−1924 nimitihe '''Üläudinsk:aks''' ({{lang-bua|Дээдэ Үдэ}}, {{lang-ru|Верхнеу́динск}}).
 
 == Geografijan andmused ==
 Lidn sijadase [[Seleng (jogi)|Seleng-jogen]] da sen oiktan Ud-ližajogen kaikil randoil, mägidenkeskeižes katl'uses, 500..800 m korktusil valdmeren pindan päl, oiged rand om korktemb. Matkad [[Moskv]]hasai om 5660 km päivlaskmha avtotedme, [[Baikal]]an randhasai — 100 km päivlaskmha orhal. Lähembaine järed lidn om [[Irkutsk]] 454 km päivlaskmha avtotedme.
 
-Ulan Ude jagase koumhe lidnrajonha. Lidn om lidnümbrikon üks'jäine eländpunkt.
+Ulan Ude jagase koumeks lidnrajonaks: Raudterajon ({{lang-bua|Түмэр замай хороо}}, {{lang-ru|Железнодорожный район}}), Oktäbrin rajon (''Октябриин хороо / Октябрьский район''), Nevondkundaline rajon (''Зүблэлтын хороо / Советский район''). Lidn om lidnümbrikon üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 404 400 ristitud. Kaikiš suremb lidnan ristitišt om nügüd' (vl 2017), se otab 43% tazovaldkundan ristitištos.
+Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 404 400 ristitud. Kaikiš suremb lidnan ristitišt oli 439 128 eläjad vl 2020. Ulan Uden eläjad otiba 43% tazovaldkundan ristitištos vl 2017.
+
+Rahvahad (2018): [[venälaižed]] — 62%, [[burätalaižed]] — 28%, toižed rahvahad — 10%.
+
+Edeline lidnan pämez' om Aleksandr Golkov (tal'vku 2012 — keväz'ku 2019).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Мэрия Улан-Удэ.JPG|Lidnan administracijan sauvuz (2012)
+Свято-Одигитриевский собор в Улан-Удэ (Россия) 002.jpg|Spasan jumalanpert' (huralpäi) i Jumalanmaman Smolenskan «Odigitrija»-jumalaižen kafedraline päjumalanpert' (oiktalpäi tagamal, om saudud vll 1741−1785), vn 2011 nägu (ortodoksine hristanuskond)
+Hambin-Hyre.JPG|Hambin sume (buddizm), vn 2009 nägu
+У-УАЗ.jpg|Ulan Uden aviategimen administrativine korpus vl 2014
+BSU 5.JPG|Burätijan valdkundaline universitet Dorži Banzarovan nimed (2010, päkorpus)
+Улан-Удэ в конце 2008 года (04).JPG|Burätijan tedokeskuz (2008, Venäman tedoakademijan Sibirin palakund)
+Удан-Удэ. Бурятский театр оперы и балета.jpg|Burätijan valdkundaline akademine operan da baletan teatr i Teatraline torg senno (2016)
+Театр Русской драмы имени Н. А. Бестужева.JPG|Valdkundaline venälaine dramteatr (2012)
+ФСК Улан-Удэ.JPG|Fizkul'turiž-sportivine kompleks (2015)
+General view of the Ulan-Ude airport building.jpg|Rahvahidenkeskeižen Baikal-lendimportan päsauvuz vl 2016
+Железнодорожный Вокзал Улан-Удэ - panoramio.jpg|Ulan Ude-päraudtestancijan sauvused vl 2008
+</gallery>
+[[Fail:Вид на Улан-Удэ с Селенги. 07.2015 - panoramio.jpg|thumb|center|1000px|<center>Ulan Uden tobjan palan ühthine nägu Seleng-jogen vastrandaspäi vn 2015 heinkus</center>]]
 
 == Tetabad sündnuded ==
 * [[Ulzitujev Amarsana|Amarsana Ulzitujev]] (sünd. 1963) — burätalaine mez', Venäman eläi, burätine kirjutai.
