--- a/Ulan_Ude.mw
+++ b/Ulan_Ude.mw
@@ -18,7 +18,6 @@
 '''Ulan Ude''' ({{lang-ru|Улан-Удэ}}, {{lang-bua|Улаан Үдэ хото}}) om lidn da lidnümbrik [[Venäma]]n [[Sibir'|Sibirin]] suvipäivnouzmas. Se om [[Burätijan Tazovaldkund]]an pälidn da kaikiš suremb lidn.
 
 == Istorii ==
-[[Fail:Ulan-Ude Burg.JPG|thumb|right|250px|Muštrist Udan lidnusen alusenpanendan sijas]]
 Eländpunktan aluz om pandud vl 1666 Venäman [[kozakad|kozakoil]] kuti ''Tal'vdundan sija Udal'' ({{lang-ru|Удинское зимовье}}) keradamha valdkundmaksuid tungusalaižiš rahvahišpäi. Vspäi 1680 sen nimi oli ''Udan lidnuz'' ({{lang-ru|Удинский острог}}). Vl 1690 sai lidnan statusad udenke ''Udinsk''-nimenke. Vozil 1735−1924 nimitihe '''Üläudinsk:aks''' ({{lang-bua|Дээдэ Үдэ}}, {{lang-ru|Верхнеу́динск}}).
 
 == Geografijan andmused ==
@@ -35,7 +34,7 @@ Edeline lidnan pämez' om Aleksandr Golkov (tal'vku 2012 — keväz'ku 2019).
 
 == Galerei ==
 <gallery mode="packed" heights="125px">
-Мэрия Улан-Удэ.JPG|Lidnan administracijan sauvuz (2012)
+Ulan-Ude Burg.JPG|Muštrist Udan lidnusen alusenpanendan sijasМэрия Улан-Удэ.JPG|Lidnan administracijan sauvuz (2012)
 Свято-Одигитриевский собор в Улан-Удэ (Россия) 002.jpg|Spasan jumalanpert' (huralpäi) i Jumalanmaman Smolenskan «Odigitrija»-jumalaižen kafedraline päjumalanpert' (oiktalpäi tagamal, om saudud vll 1741−1785), vn 2011 nägu (ortodoksine hristanuskond)
 Hambin-Hyre.JPG|Hambin sume (buddizm), vn 2009 nägu
 У-УАЗ.jpg|Ulan Uden aviategimen administrativine korpus vl 2014
