*Empty MediaWiki Message*

--- a/Ulan_Ude.mw
+++ b/Ulan_Ude.mw
@@ -34,7 +34,8 @@ Edeline lidnan pämez' om Aleksandr Golkov (tal'vku 2012 — keväz'ku 2019).
 
 == Galerei ==
 <gallery mode="packed" heights="125px">
-Ulan-Ude Burg.JPG|Muštrist Udan lidnusen alusenpanendan sijasМэрия Улан-Удэ.JPG|Lidnan administracijan sauvuz (2012)
+Ulan-Ude Burg.JPG|Muštrist Udan lidnusen alusenpanendan sijas
+Мэрия Улан-Удэ.JPG|Lidnan administracijan sauvuz (2012)
 Свято-Одигитриевский собор в Улан-Удэ (Россия) 002.jpg|Spasan jumalanpert' (huralpäi) i Jumalanmaman Smolenskan «Odigitrija»-jumalaižen kafedraline päjumalanpert' (oiktalpäi tagamal, om saudud vll 1741−1785), vn 2011 nägu (ortodoksine hristanuskond)
 Hambin-Hyre.JPG|Hambin sume (buddizm), vn 2009 nägu
 У-УАЗ.jpg|Ulan Uden aviategimen administrativine korpus vl 2014
