+hom, formitez, aktualizacii

--- a/Ak-Dovurak.mw
+++ b/Ak-Dovurak.mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Ak-Dovurakan lidnanznam
  | Flag text = Ak-Dovurakan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 13,578
- | Voz' = 2017
+ | Eläjiden lugu = 13,769
+ | Voz' = 2021
  | Pind = 48.69
  | Fail = Ak-Dovurak.png
  | Pämez' = Aleftina Kuular<br />(reduku 2012—)
@@ -19,7 +19,7 @@
 == Istorii ==
 Eländpunktan aluz om pandud vl 1964 Sauvojiden ({{lang-ru|Строителей}}) i Kaikenaigaine- ({{lang-ru|Постоянный}}) žiloiden ühtenzoitusel lidnan statusanke. Panihe žilod edel 1959 vot sauvomha azbestkombinatad pit'kkuiduižen [[azbest]]an pästandanke sijaližel torhudel (kar'jer om pohjoižhe lidnaspäi).
 
-Lidn šingotase azbestan i šiferan tehmižel, mugažo kahtenz' surtte lämuzelektrokeskuz sijadase lidnas.
+Ak-Dovurak šingotase azbestan i šiferan tehmižel, mugažo kahtenz' surtte lämuzelektrokeskuz sijadase lidnas.
 
 == Geografijan andmused ==
 Lidn sijadase Hemčik-jogen huran randal ({{lang-tyv|Хемчик}}, [[Jenisei]]n hura ližajogi), 850 m ü.m.t. keskmäižel korktusel. Matkad [[Kizil]]hasai om 270 km päivnouzmha orhal vai 305 km avtotedme. Lähembaine lidn om [[Čadan]] 70 km päivnouzmha orhal vai 82 km avtol sil-žo tel. Lähembaine raudtestancii sijadase [[Abaz (lidn)|Abaz-lidnas]] (Hakasii) 170 km pohjoižhe orhal vai 240 km avtotedme.
@@ -27,11 +27,16 @@ Lidn sijadase Hemčik-jogen huran randal ({{lang-tyv|Хемчик}}, [[Jenisei]]
 Ak-Dovurak om lidnümbrikon üks'jäine eländpunkt. Om ümbärtud [[Barun-Hemčikan kožuun]]an territorijal.
 
 == Eläjad ==
-Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 13 468 ristitud. Kaikiš suremb ristitišt oli 15 191 eläjad vl 1989. Ortodoksižen hristanuskondan Pühän Jumalanmaman Blagoveššenjan jumalanpert' i buddizman suburgan oma olmas lidnas.
+Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 13 468 ristitud. Kaikiš suremb ristitišt oli 15 191 eläjad vl 1989.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Pühän Jumalanmaman Blagoveššenjan jumalanpert' i [[buddizm]]an suburgan oma olmas lidnas.
 
 Rahvahad (enamba 0,4% vn 2002 Venäman rahvahanlugemižen mödhe, ozutadud rahvahudenke): [[tuvalaižed]] — 91,8%, [[venälaižed]] — 6,1%, [[hakaslaižed]] — 0,5%, [[kirgizlaižed]] — 0,4%, [[komilaižed]] — 0,4%, toižed rahvahad — 0,8%.
 
-Ak-Dovurakan kaivuztehnikum om professionaližen opendusen aluzkundaks.
+Ak-Dovurakan kaivuztehnikum<ref>[http://agttuva.ru/ Ak-Dovurakan kaivuztehnikuman sait (''agttuva.ru'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://akdovurak.rtyva.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''akdovurak.rtyva.ru'').] {{ref-ru}}
