--- a/Gerakl.mw
+++ b/Gerakl.mw
@@ -1,6 +1,6 @@
 {{10000}}
 {{A10000}}
-[[Fail:Herakles Farnese MAN Napoli Inv6001 n01.jpg|thumb|right|200px|«[[Farnezen Gercules]]» [[Napolin Rahvahaline arheologine muzei|Napolin Rahvahaližes arheologižes muzejas]]]]
+[[Fail:Herakles Farnese MAN Napoli Inv6001 n01.jpg|thumb|right|200px|«[[Farnezen Gerkules]]» [[Napolin Rahvahaline arheologine muzei|Napolin Rahvahaližes arheologižes muzejas]]]]
 '''Gerakl''' ({{lang-grc|Ἡρακλῆς}} ''Herakles'') vai '''Gerkules''' ({{lang-la|Herculēs}}) — [[amuižgrekan mifologii|amuižgrekan mifologijas]] om vägimez', [[Zevs]]-jumalan i [[Alkmena]]n ([[Amfitrion]]-vägimehen akan) poig. Sündundan aigan oli nimitadud Alkidaks ({{lang-grc|Ἀλκείδης}} ''Alkeides''). Andmused hänen polhe oma jo «[[Iliad]]as» (II 658 da tž.).
 
 Kesked äiluguižid mifid Geraklan polhe kaikiš tetabamb om cikl 12 vägitegos, kudambad Gerakl tegi, konz oli [[Evrisfei]]n ([[Mikenad|Mikenoiden]] carin) radnikoičendal.
