--- a/An-148.mw
+++ b/An-148.mw
@@ -1,7 +1,9 @@
 [[Fail:Rossiya Antonov An-148-100B Dvurekov-1.jpg|thumbnail|right|250px|Antonov An-148]]
 '''An-148''' ({{lang-ru|Ан-148}}) om [[Ukrain]]an «[[Antonov (kompanii)|Antonov]]»-kompanijan turboreaktivine passažirine [[lendim]] kahtenke likutimenke.
 
-Ezmäine lenduz oli [[2004]]-nden voden tal'vkul. Om kävutandas vspäi 2009, voib lähtta leten gruntaspäi. Kaik om pästtud 48 lendint vodele 2020 [[Voronež]]an i [[Kijev]]an tegimil. Lendandan edhuz om 4400 kilometrhasai, otab laidale 3 tömehišton ühtnijad i 80 passažirad vai sen vähemba.
+Ezmäine lenduz oli [[2004]]-nden voden tal'vkul. Om kävutandas vspäi 2009, voib lähtta leten gruntaspäi. Kaik om pästtud 48 lendint vodele 2020 (i vn 2021 semendkule) [[Voronež]]an i [[Kijev]]an tegimil. Lendandan edhuz om 4400 kilometrhasai, otab laidale 3 tömehišton ühtnijad i 80 passažirad vai sen vähemba.
+
+Modifikacijoiden keskes oma An-158 (99 ristitud, edhuz 2500 km), An-168 (azjaline aviacii, edhuz 7000 km), An-168MP patrul'aviacijan täht, An-178 — transportlendim An-158-modifikacijan alusel.
 
 == Harakteristikad ==
 Likutimed oma kaks' kaks'konturišt turboreaktivišt D-436-148.
