--- a/Čadan.mw
+++ b/Čadan.mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = 
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 8,991
- | Voz' = 2017
+ | Eläjiden lugu = 9,519
+ | Voz' = 2021
  | Pind = 
  | Fail = Устуу-Хурээ 01.JPG
  | Pämez' = Čoigan Monguš<br />(tal'vku 2016—)
@@ -19,7 +19,7 @@
 == Istorii ==
 Eländpunktan aluz om pandud kuti [[buddizm]]an ''Aldii-Huree-jumalankodi'' ({{lang-ru|Алдыы-Хурээ}}). Vozil 1923−1929 jumalankodin seinidentagaine žilo oli tetab kuti ''Artaadit'', sid' om olmas nügüdläiženke nimenke. Vl 1930 jumalankodi oli muretud. Čadan-žilo sai lidnan statusad vl 1945. Vspäi 2003 Aldii-Huree-pühäpert' om udessündutadud.
 
-Lidn šingotase sömtegimišton edheotandoil, mugažo sadas [[kivihil'|kivihil't]] kar'jeran mahtusel läz lidnad.
+Čadan šingotase sömtegimišton edheotandoil, mugažo sadas [[kivihil'|kivihil't]] kar'jeran mahtusel läz lidnad.
 
 == Geografijan andmused ==
 Lidn sijadase ühtennimižen jogen randal (mülüb [[Jenisei]]n basseinha), 800..825 m korktusil. Matkad [[Kizil]]hasai om 200 km päivnouzmha orhal vai 220 km avtotedme. Lähembaine lidn om [[Ak-Dovurak]] 70 km päivlaskmha orhal vai 82 km avtol.
@@ -27,12 +27,23 @@ Lidn sijadase ühtennimižen jogen randal (mülüb [[Jenisei]]n basseinha), 800.
 Kirsarai-žilo (178 rist. vl 2017) mülüb lidnankundha (sumonha). Lidnankundan pind — 101,29 km².
 
 == Eläjad ==
-Vn 2010 kaiken Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 9 035 ristitud, kožuunan nell' ühesandest. Kaikiš suremb lidnan ristitišt oli 10 775 eläjad vl 1989. Vl 2017 kaik 9 169 ristitud elihe lidnankundas.
+Vn 2010 kaiken Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 9 035 ristitud, kožuunan nell' ühesandest. Kaikiš suremb lidnan ristitišt oli 10 775 eläjad vl 1989. Vl 2017 kaik 8 991 ristitud elihe lidnas i 9 169 ristitud kaikes lidnankundas.
 
-Tuvan tehnologine tehnikum om professionaližen opendusen aluzkundaks.
+Tuvan tehnologine tehnikum<ref>[http://ttt.rtyva.ru/ Tuvan tehnologižen tehnikuman sait (''ttt.rtyva.ru'').] {{ref-ru}}</ref> baziruiše lidnas i om sen professionaližen opendusen aluzkundaks.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Памятник основателю тувинской государственности, Даа кожууна Монгуш Буяна-Бадыргы.jpg|Muštnik Tuvan valdkundan [[Monguš Bujan-Badirgi]]-alusenpanijale, vn 2018 nägu (eli vll 1892−1932)
+Ворота в устуу-хурээ.jpg|Ustuu-Huree-jumalankodi (buddizm) seičemes kilometras lidnaspäi, vn 2016 nägu ({{lang-tyv|Үстүү-Хүрээ}} «üläjumalankodi», om udessündutadud vll 2008−2012)
+Chadan ugol2.jpg|Čadanan hil'kar'jer lidnanno (2009. voz' vai sen aigemba)
+Мемориальный дом-музей семьи Шойгу.jpg|Šoigu-kanzan memorialine muzei (2018, om avaitud vl 2015)
+</gallery>
 
 == Tetabad ristitud ==
 * [[Šoigu Sergei‎|Sergei Šoigu]] (s. vl [[1955. voz'|1955]]) — Venäman [[Venäman kaičendministruz|kaičendministr]].
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://dzun.tuva.ru/category/chadan/ Čadan-sumonan lehtpoled kožuunan oficialižel ''dzun.tuva.ru''-saital.] {{ref-ru}}
