--- a/Čadan.mw
+++ b/Čadan.mw
@@ -19,6 +19,8 @@
 == Istorii ==
 Eländpunktan aluz om pandud kuti [[buddizm]]an ''Aldii-Huree-jumalankodi'' ({{lang-ru|Алдыы-Хурээ}}). Vozil 1923−1929 jumalankodin seinidentagaine žilo oli tetab kuti ''Artaadit'', sid' om olmas nügüdläiženke nimenke. Vl 1930 jumalankodi oli muretud. Čadan-žilo sai lidnan statusad vl 1945. Vspäi 2003 Aldii-Huree-pühäpert' om udessündutadud.
 
+Lidnan i kaiken kožuunan klimat om Edahaižen Pohjoižen klimatha tazostadud. Voden keskmäine lämuz om −1,7 C° vilun tal'ven tagut (−22..−27 C° keskmäras tal'vkus-uhokus). Paneb sadegid 300 mm vodes, enamba kaiked heinkus (62 mm), vähemba uhokus (7 mm).
+
 Čadan šingotase sömtegimišton edheotandoil, mugažo sadas [[kivihil'|kivihil't]] kar'jeran mahtusel läz lidnad.
 
 == Geografijan andmused ==
