--- a/Kizil.mw
+++ b/Kizil.mw
@@ -1,15 +1,15 @@
 {{Eländpunkt
  | Nimi = Kizil<br />Кызыл <small>(ven. i tuv.)</small>
- | Lidnanznam = Герб Кызыла 2016.jpg
- | Flag = Flag of Kyzyl (Tuva).png
+ | Lidnanznam = Coat of arms of Kyzyl.svg
+ | Flag = Flag of Kyzyl.svg
  | Lidnanznam text = Kizilan lidnanznam
  | Flag text = Kizilan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 116,015
- | Voz' = 2017
+ | Eläjiden lugu = 120,067
+ | Voz' = 2021
  | Pind = 97.41
  | Fail = Вид на г. Кызыл.JPG
- | Pämez' = Vladislav Hovalig<br />(2008—)
+ | Pämez' = Karim Bailak-oolovič Sagaan-ool<br />(kül'mku 2018—)
  | Telefonkod = +7-39422-xx-xxx
  | Avtokod = 17
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
@@ -25,12 +25,16 @@ Eländpunktan aluz om pandud venämalaižil vl 1914 kuti ''Belocarsk-žilo''. Vo
 == Geografii ==
 Lidn sijadase tazovaldkundan keskuses, Tuvan katl'uses, 630 m korktusel valdmeren pindan päl. Kaks' joged ühthejokstas lidnan rounoiš: [[Sur' Jenisei]] ({{lang-tyv|Бии-Хем}}) da [[Pen' Jenisei]] ({{lang-tyv|Каа-Хем}}, ''Кызыл-Хем''). Se om [[Jenisei]]n joginišk ({{lang-tyv|Улуг-Хем}}). Lähembaižed järedad lidnad oma [[Minusinsk]], [[Abakan]] da [[Černogorsk]] 390 km lodeheze avtotedme, lähembaine raudtestancii om Minusinskas.
 
-Klimat om terav kontinentaline kuiv. Tal'vel ei olele sulasäd, paneb 10..20 sm lunt. Voib olda pölütorokoid da kovid tulleid semendkus-heinkus. Voden keskmäine lämuz om –1,3 C°, lidnan klimat om tazostadud [[Edahaine Pohjoine|Edahaižhe Pohjoižhe]]. Paneb sadegid 217 mm, enamba kezal (127 mm).
+Klimat om terav kontinentaline kuiv. Tal'vel ei olele sulasäd, paneb 10..20 sm lunt. Voib olda pölütorokoid da kovid tulleid semendkus-heinkus. Voden keskmäine lämuz om –0,7 C°, lidnan klimat om tazostadud [[Edahaine Pohjoine|Edahaižhe Pohjoižhe]]. Paneb sadegid 236 mm, enamba kezal (137 mm, 33..56 mm kuidme).
 
 Kizil om lidnümbrikon üks'jäine eländpunkt. Lidnümbrikon pind — 200,37 km².
 
 == Eläjad ==
-Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 109 918 ristitud. Kaikiš suremb lidnan ristitišt om nügüd' (vl 2017). Tazovaldkundan koumandez eläb Kizilas.
+Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 109 918 ristitud. Kaikiš suremb lidnan ristitišt om nügüd' (vl 2021). Tazovaldkundan koumandez eläb Kizilas.
+
+Rahvahad (2010): [[tuvalaižed]] — 68,1%, [[venälaižed]] — 28,4%, toižed rahvahad — 3,5%.
+
+Edeline lidnan pämez' om Vladislav Hovalig (eloku 2008 — reduku 2018).
 
 == Ižanduz da transport ==
 Om kaivuztegimišton edheotandoid lidnan ümbrištos.
@@ -38,6 +42,20 @@ Om kaivuztegimišton edheotandoid lidnan ümbrištos.
 Avtobusad da taksid oma kundaližeks transportaks lidnas. Avtobusad da jogitransport ühtenzoittas lidnad kaikidenke rajonkeskusidenke. Projektiruidas raudted, linneb Krasnojarskan randan Kuragino-žilospäi.
 
 Regionaline civiline ''Kizil-lendimport'' (''KYZ / КЫЫ'') sijadase lidnan suves, 6 km suvipäivlaskmha lidnan keskusespäi. Tehtas regularižid reisid [[Irkutsk]]ha, [[Krasnojarsk]]ha da [[Novosibirsk]]ha, mugažo [[Tuvan Tazovaldkund]]an eländpunktoihe.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Рассвет в Кызыле.jpg|Tazovaldkundan parlamentan i Kizil-lidnan tobmuden aluzkundoiden sauvuz (2016)
+Arb Court Tyva.jpg|Tuvan Tazovaldkundan Arbitražine käskuzkund (2010)
+Буддийский храм "Цеченлиг".jpg|«Cečenlig»-pühäpert' (buddizm), vn 2014 nägu
+Воскресенский кафедральный собор в Кызыле в январе 2017 года.jpg|Sündun Eläbzdusen kafedraline päjumalanpert' (ortodoksine hristanuskond), vn 2017 nägu
+A162-M54-rasvyaska.jpg|Erižtazoristte «Enisei»-avtotel (R257) vl 2004
+TuvSU.jpg|Tuvan valdkundaline universitet (2015)
+День Республики Тыва.jpg|Tuvan nacionaline muzikaline dramteatr V. Kok-oolan nimed Arat-torgul i Tuvan Tazovaldkundan päivän oigenduz (2017)
+Ярыгин аттыг спортчу комплекс.jpg|Sportkompleks Jariginan nimed (2013)
+Пятизвездочный отель "Azimut" - Кызыл.jpg|«Azimut»-adivpert' vl 2018
+Kyzyl avia.jpg|Kizil-lendimportan sauvuz vl 2014
+</gallery>
 
 == Irdkosketused ==
 * [http://www.mkyzyl.ru/ Lidnan sijaližen ičeohjastusen aluzkundoiden oficialine portal (''mkyzyl.ru'').] {{ref-ru}}
