*Empty MediaWiki Message*

--- a/Kizil.mw
+++ b/Kizil.mw
@@ -49,7 +49,7 @@ Regionaline civiline ''Kizil-lendimport'' (''KYZ / КЫЫ'') sijadase lidnan suv
 Arb Court Tyva.jpg|Tuvan Tazovaldkundan Arbitražine käskuzkund (2010)
 Буддийский храм "Цеченлиг".jpg|«Cečenlig»-pühäpert' (buddizm), vn 2014 nägu
 Воскресенский кафедральный собор в Кызыле в январе 2017 года.jpg|Sündun Eläbzdusen kafedraline päjumalanpert' (ortodoksine hristanuskond), vn 2017 nägu
-A162-M54-rasvyaska.jpg|Erižtazoristte «Enisei»-avtotel (R257) vl 2004
+A162-M54-rasvyaska.jpg|Erižtazoristte «[[Jenisei (avtote)|Jenisei]]»-avtotel (R257) vl 2004
 TuvSU.jpg|Tuvan valdkundaline universitet (2015)
 День Республики Тыва.jpg|Tuvan nacionaline muzikaline dramteatr V. Kok-oolan nimed Arat-torgul i Tuvan Tazovaldkundan päivän oigenduz (2017)
 Ярыгин аттыг спортчу комплекс.jpg|Sportkompleks Jariginan nimed (2013)
