--- a/Persijan_kel'.mw
+++ b/Persijan_kel'.mw
@@ -4,6 +4,8 @@
 
 Pagižijoiden lugu om läz 110 millionad ristituid (2019).<ref>[http://asianstudies.unc.edu/persian/ Persijan kel' ''asianstudies.unc.edu''-saital.]</ref>
 
+Kelen reguliruindorganizacii om Iranan Persijan kelen i literaturan akademii ([[Tehran]]) vspäi 1935.
+
 == Homaičendad ==
 <references />
 
