--- a/Persijan_kel'.mw
+++ b/Persijan_kel'.mw
@@ -1,10 +1,12 @@
 {{1000}}{{A10000}}
 [[Fail:Persian Language Location Map.svg|thumb|right|250px|Kelen levigandusen kart]]
-'''Persijan kel' ''' vai '''Farsi''' (ičeze nimituz: زبان فارسی [zæ'bɒːne fɒːr’siː]) om üks' [[indoevropižed keled|indoevropižiš kelišpäi]]. Se om [[Iran]]an, [[Afganistan]]an ([[dari]]) i [[Tadžikistan]]an ([[tadžikan kel']]) valdkundkel'.
+'''Persijan kel' ''' vai '''Farsi''' (ičeze nimituz: زبان فارسی [zæ'bɒːne fɒːr’siː]) om üks' [[indoevropižed keled|indoevropižiš kelišpäi]]. Se om [[Iran]]an (farsi ičeksaz), [[Afganistan]]an ([[dari]]) i [[Tadžikistan]]an ([[tadžikan kel']]) valdkundkel'.
 
-Pagižijoiden lugu om läz 110 millionad ristituid (2019).<ref>[http://asianstudies.unc.edu/persian/ Persijan kel' ''asianstudies.unc.edu''-saital.]</ref>
+Pagižijoiden lugu om läz 110 millionad ristituid<ref>[http://asianstudies.unc.edu/persian/ Persijan kel' ''asianstudies.unc.edu''-saital.]</ref> (2019), sidä kesken 60 mln ristituiden mamankel' (40 mln Iranas).
 
 Kelen reguliruindorganizacii om Iranan Persijan kelen i literaturan akademii ([[Tehran]]) vspäi 1935.
+
+Persijan kel' om rahvahidenkeskeižiden kosketusiden kel' islaman mail'man päivnouzmas 10.-12. voz'sadaspäi. Farsi- i dari-toižendoiden kirjkel' om sätud araban kirjkelen alusel [[persijan kirjamišt]]. [[Kirilline kirjamišt]] kävutase tadžikan kelen täht vspäi 1939.
 
 == Homaičendad ==
 <references />
