*Empty MediaWiki Message*

--- a/Britanine_imperii.mw
+++ b/Britanine_imperii.mw
@@ -7,7 +7,7 @@
  | Flag = Flag of the United Kingdom.svg
  | Valdkundznam text = Britanižen imperijan znam
  | Flag text = Britanižen imperijan flag
- | Kart = The British Empire.png
+ | Kart = The British Empire.svg
  | Pälidn = [[London]]
  | Eläjiden lugu = 480 mln
  | Voz' = 1922
