--- a/Venäman_voz'tuha.mw
+++ b/Venäman_voz'tuha.mw
@@ -1,5 +1,12 @@
-[[Fail:Millennium of Russia Monument in Nowgorod, 2005.jpg|thumb|right|250px|«Venäman voz'tuha»-muštpacaz]]
-'''«Venäman voz'tuha»-muštpacaz''' ({{lang-ru|Тысячелетие России}}) om monument, saudud [[Sur' Uz'lidn|Sures Uz'lidnas]] vl [[1862]] legendarižen [[varägoiden kucund]]an [[Venä]]hä voz'tuhaižen jubilejan oiktastuseks. Muštpachan projektan avtorad oliba skul'ptorad [[Mikešin Mihail|Mihail Mikešin]], [[Šreder Ivan|Ivan Šreder]] i arhitektor [[Gartman Viktor|Viktor Gartman]]. Muštpacaz sijadase [[Uz'lidnan detinec|Uz'lidnan detinc]]as, [[Uz'lidnan Sofijan päjumalanpert'|Sofijan päjumalanpertin]] kohtas.
+[[Fail:Millennium of Russia Monument in Nowgorod, 2005.jpg|thumb|right|250px|«Venäman voz'tuha»-muštpacaz vl 2005]]
+'''«Venäman voz'tuha»-muštpacaz''' ({{lang-ru|Тысячелетие России}}) om [[Venäma]]n monument. Se om sätud i pandud [[Sur' Uz'lidn|Sures Uz'lidnas]] vl [[1862]] legendarižen [[varägoiden kucund]]an [[Venä]]hä voz'tuhaižen jubilejan oiktastuseks.
+
+Muštpachan projektan avtorad oma skul'ptorad [[Mikešin Mihail|Mihail Mikešin]], [[Šreder Ivan|Ivan Šreder]] i arhitektor [[Gartman Viktor|Viktor Gartman]]. Muštpacaz sijadase [[Uz'lidnan detinc]]as, [[Pühän Sofijan päjumalanpert' (Uz'lidn)|Sofijan päjumalanpertin]] kohtas. Mülüb UNESCO:n Mail'man jäl'gushe vspäi 1992.
+
+Muštnik om tehtud bronzaspäi neovizantijan stiliš. Se om 15,7 metrad kortte.
+
+== Homaičendad ==
+<references />
 
 {{Commons|Category:Millennium of Russia}}
 
