--- a/Venäman_voz'tuha.mw
+++ b/Venäman_voz'tuha.mw
@@ -1,7 +1,7 @@
 [[Fail:Millennium of Russia Monument in Nowgorod, 2005.jpg|thumb|right|250px|«Venäman voz'tuha»-muštpacaz vl 2005]]
-'''«Venäman voz'tuha»-muštpacaz''' ({{lang-ru|Тысячелетие России}}) om [[Venäma]]n monument. Se om sätud i pandud [[Sur' Uz'lidn|Sures Uz'lidnas]] vl [[1862]] legendarižen [[varägoiden kucund]]an [[Venä]]hä voz'tuhaižen jubilejan oiktastuseks.
+'''«Venäman voz'tuha»-muštpacaz''' ({{lang-ru|Тысячелетие России}}) om [[Venäma]]n monument. Se om sätud [[Piter]]iš, todud jogidme i pandud [[Sur' Uz'lidn|Surhe Uz'lidnha]] vll 1861−1862 legendarižen [[varägoiden kucund]]an [[Venä]]hä voz'tuhaižen jubilejan oiktastuseks.
 
-Muštpachan projektan avtorad oma skul'ptorad [[Mikešin Mihail|Mihail Mikešin]], [[Šreder Ivan|Ivan Šreder]] i arhitektor [[Gartman Viktor|Viktor Gartman]]. Muštpacaz sijadase [[Uz'lidnan detinc]]as, [[Pühän Sofijan päjumalanpert' (Uz'lidn)|Sofijan päjumalanpertin]] kohtas. Mülüb UNESCO:n Mail'man jäl'gushe vspäi 1992.
+Muštpachan projektan avtorad oma skul'ptorad [[Mikešin Mihail|Mihail Mikešin]], [[Šreder Ivan|Ivan Šreder]] i arhitektor [[Gartman Viktor|Viktor Gartman]], valitihe konkursan mödhe 52 projektaspäi. Muštpacaz sijadase kümnemetrižel manalaižel alusel [[Uz'lidnan detinc]]as, [[Pühän Sofijan päjumalanpert' (Uz'lidn)|Sofijan päjumalanpertin]] kohtas. Ende toine muštnik oli sen sijas, vn 1812 Uz'lidnan rahvahansodavägiden oiktastuseks, sirtihe sidä torgule Bajarišton Suiman sauvusen kohtas. Monument om avaitud vn 1862 sügüz'kun 8. (20.) päiväl [[Aleksandr II]]-imperatoran olendas. Om udessündutadud murendusen jäl'ghe [[Sur' soda|Suren sodan]] aigan vl 1944. Mülüb UNESCO:n Mail'man jäl'gushe vspäi 1992.
 
 Muštnik om tehtud bronzaspäi neovizantijan stiliš. Se om 15,7 metrad kortte.
 
