--- a/Šagonar.mw
+++ b/Šagonar.mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = 
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 10,793
- | Voz' = 2017
+ | Eläjiden lugu = 11,289
+ | Voz' = 2021
  | Pind = 61.22
  | Fail = Шагаан-Арыгда челээш.JPG
  | Pämez' = Marija Damčai<br />(sulaku 2012—)
@@ -19,7 +19,7 @@
 == Istorii ==
 Eländpunktan aluz om pandud vl 1888 (nüg. Vanh Šagonar). Se sai lidnan statusad vl 1945 Tuvan mülütamižen jäl'ghe [[Nevondkundaline Ühtištuz|NSTÜ:he]]. Šagonar oli sirtud 7 kilometraks [[Sajanan-Šušenskojen vezivaradim]]en täutmižen tagut vspäi 1975.
 
-Lidn šingotase sauvondmaterialiden pästandan (savič, šlakblokad, mecanpilind) i sömtegimišton penil edheotandoil. Om živatvodindan rajonan keskuseks.
+Šagonar šingotase sauvondmaterialiden pästandan (savič, šlakblokad, mecanpilind) i sömtegimišton penil edheotandoil. Om živatvodindan rajonan keskuseks.
 
 == Geografijan andmused ==
 Lidn sijadase [[Jenisei]]n hural randal (Ülembaine Jenisei, {{lang-tyv|Улуг-Хем}}), 560 m ü.m.t. keskmäižel korktusel. Matkad [[Kizil]]hasai om 105 km päivnouzmha orhal vai 115 km avtotedme. Toine lähembaine lidn om [[Čadan]] 97 km päivlaskmha orhal vai 112 km avtol.
@@ -30,6 +30,12 @@ Lidn sijadase [[Jenisei]]n hural randal (Ülembaine Jenisei, {{lang-tyv|Улуг
 Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 10 956 ristitud. Kaikiš suremb ristitišt oli 11 386 eläjad vl 2009.
 
 Rahvahad (enamba 0,6% vn 2002 Venäman rahvahanlugemižen mödhe): [[tuvalaižed]] — 81,9%, [[venälaižed]] — 15,1%, [[komilaižed]] — 0,8%, [[hakaslaižed]] — 0,6%, toižed rahvahad da rahvahuden ozutandata — 1,6%. Uskojad oma [[buddizm]]an, [[lamaizm]]an da [[paganuz|paganusen]] (šamanizm) polestajad tobjimalaz.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Шагаан-Арыг хоорай, адрес.jpg|Znam lidnan röunal (2014)
+Заправка.jpg|Benzintäutim läz lidnad vl 2016
+</gallery>
 
 == Irdkosketused ==
 * [http://shagonar17.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''shagonar17.ru'').] {{ref-ru}}
